Remove savers and secured assets
