# openapi/openapi.yaml
@@ -382,91 +382,6 @@ paths:
                 "200":
                     $ref: "#/components/responses/DepthHistoryResponse"
 
-    "/v2/history/savers/{pool}":
-        get:
-            operationId: GetSaversHistory
-            summary: Savers Units and Depth History
-            description: |
-                Returns savers depths and units.
-                The values report the state at the end of each interval.
-
-                History endpoint has two modes:
-                * With Interval parameter it returns a series of time buckets. From and To dates will
-                  be rounded to the Interval boundaries.
-                * Without Interval parameter a single From..To search is performed with exact timestamps.
-
-
-                * Interval: possible values: 5min, hour, day, week, month, quarter, year.
-                * count: [1..400]. Defines number of intervals. Don't provide if Interval is missing.
-                * from/to: optional int, unix second.
-
-                Possible usages with interval.
-                * last 10 days: `?interval=day&count=10`
-                * last 10 days before to: `?interval=day&count=10&to=1608825600`
-                * next 10 days after from: `?interval=day&count=10&from=1606780800`
-                * Days between from and to. From defaults to start of chain, to defaults to now.
-                  Only the first 400 intervals are returned:
-                  `interval=day&from=1606780800&to=1608825600`
-
-                Pagination is possible with from&count and then using the returned meta.endTime as the
-                From parameter of the next query.
-
-                Possible configurations without interval:
-                * exact search for one time frame: `?from=1606780899&to=1608825600`
-                * one time frame until now: `?from=1606780899`
-                * from chain start until now: no query parameters
-            parameters:
-                - name: pool
-                  in: path
-                  description: Return stats for this single pool.
-                  required: true
-                  schema:
-                      type: string
-                - name: interval
-                  in: query
-                  description: Interval of calculations
-                  required: false
-                  example: "day"
-                  schema:
-                      type: string
-                      enum:
-                          [
-                              "5min",
-                              "hour",
-                              "day",
-                              "week",
-                              "month",
-                              "quarter",
-                              "year",
-                          ]
-                - name: count
-                  in: query
-                  description: Number of intervals to return. Should be between [1..400].
-                  required: false
-                  example: 30
-                  schema:
-                      type: integer
-                - name: to
-                  in: query
-                  description: |
-                      End time of the query as unix timestamp. If only count is given, defaults to now.
-                  required: false
-                  example: 1608825600
-                  schema:
-                      type: integer
-                      format: int64
-                - name: from
-                  in: query
-                  description: Start time of the query as unix timestamp
-                  required: false
-                  example: 1606780800
-                  schema:
-                      type: integer
-                      format: int64
-            responses:
-                "200":
-                    $ref: "#/components/responses/SaversHistoryResponse"
-                
     "/v2/history/reserve":
         get:
             operationId: GetReserveHistory
@@ -1354,39 +1269,9 @@ paths:
                   schema:
                       type: string
                   example: "bnb1jxfh2g85q3v0tdq56fnevx6xcxtcnhtsmcu64m,bc1qcxssye4j6730h7ehgega3gyykkuwgdgmmpu62n"
-                - name: showSavers
-                  in: query
-                  description: |
-                      A flag to show saver vault membership details, the default is false.
-                  required: false
-                  example: true
-                  schema:
-                      type: boolean
-                      default: false
             responses:
                 "200":
                     $ref: "#/components/responses/MemberDetailsResponse"
-
-    "/v2/saver/{address}":
-        get:
-            operationId: GetSaverDetail
-            summary: Saver Details
-            description: |
-                Returns an array of statistics for all the savers associated with a given
-                member address.
-                Query can also be multiple addresses should be separated by comma (',')
-            parameters:
-                - name: address
-                  in: path
-                  description: |
-                      Address to match the saver. an asset address should be given.
-                  required: true
-                  schema:
-                      type: string
-                  example: "bnb1jxfh2g85q3v0tdq56fnevx6xcxtcnhtsmcu64m,bc1qcxssye4j6730h7ehgega3gyykkuwgdgmmpu62n"
-            responses:
-                "200":
-                    $ref: "#/components/responses/SaverDetailsResponse"
 
     "/v2/thorname/lookup/{name}":
         get:
@@ -1607,12 +1492,6 @@ components:
                 application/json:
                     schema:
                         $ref: "#/components/schemas/DepthHistory"
-        SaversHistoryResponse:
-            description: Depth and Units history of savers
-            content:
-                application/json:
-                    schema:
-                        $ref: "#/components/schemas/SaversHistory"
         QbtcPriceHistoryResponse: 
             description: Returns qbtc price history in USD based on the time bucket given
             content:
@@ -1717,12 +1596,6 @@ components:
                 application/json:
                     schema:
                         $ref: "#/components/schemas/MemberDetails"
-        SaverDetailsResponse:
-            description: object containing saver data for a specific member
-            content:
-                application/json:
-                    schema:
-                        $ref: "#/components/schemas/SaverDetails"
         THORNameDetailsResponse:
             description: object containing THORName data for a specific name
             content:
@@ -2341,87 +2214,6 @@ components:
                     type: string
                     description: |
                         Float, The liquidity unit value index. Sqrt(assetDepth * qbtcDepth)/liquidity units
-        SaversHistory:
-            type: object
-            required:
-                - meta
-                - intervals
-            properties:
-                meta:
-                    $ref: "#/components/schemas/SaversHistoryMeta"
-                intervals:
-                    $ref: "#/components/schemas/SaversHistoryIntervals"
-        SaversHistoryMeta:
-            type: object
-            required:
-                - startTime
-                - endTime
-                - startSaversDepth
-                - startUnits
-                - startSaversCount
-                - endSaversDepth
-                - endUnits
-                - endSaversCount
-            properties:
-                startTime:
-                    type: string
-                    description: Int64, The beginning time of bucket in unix timestamp
-                endTime:
-                    type: string
-                    description: Int64, The end time of bucket in unix timestamp
-                startSaversDepth:
-                    type: string
-                    description: |
-                        Int64(e8), The depth in savers vault at the start of the interval at time
-                        startTime
-                startUnits:
-                    type: string
-                    description: |
-                        Int64, Savers Units in the savers vault at the start of the interval at time startTime
-                startSaversCount:
-                    type: string
-                    description: |
-                        Int64, Number of savers member in the savers vault at the start of the interval at time startTime
-                endSaversDepth:
-                    type: string
-                    description: |
-                        Int64(e8), The depth in the savers vault at the end of the interval at time
-                        endTime
-                endUnits:
-                    type: string
-                    description: Int64, Savers Units in the savers vault at the end of the interval at time endTime
-                endSaversCount:
-                    type: string
-                    description: Int64, Number of savers member in the savers vault at the end of the interval at time endTime
-        SaversHistoryIntervals:
-            type: array
-            items:
-                $ref: "#/components/schemas/SaversHistoryItem"
-        SaversHistoryItem:
-            type: object
-            required:
-                - startTime
-                - endTime
-                - saversDepth
-                - saversCount
-                - saversUnits
-            properties:
-                startTime:
-                    type: string
-                    description: Int64, The beginning time of bucket in unix timestamp
-                endTime:
-                    type: string
-                    description: Int64, The end time of bucket in unix timestamp
-                saversDepth:
-                    type: string
-                    description: Int64(e8), The depth in the savers vault at the end of the interval
-                saversCount:
-                    type: string
-                    description: Int64, Number of saver members in the pool at the end of the interval
-                saversUnits:
-                    type: string
-                    description: |
-                        Int64, Savers Units in the saver vault at the end of the interval
         QbtcPriceHistory:
             type: object
             required:
@@ -2612,7 +2404,6 @@ components:
                 - assetLiquidityFees
                 - qbtcLiquidityFees
                 - totalLiquidityFeesQbtc
-                - saverEarning
                 - rewards
                 - earnings
             description: pool earnings data during the time interval
@@ -2630,10 +2421,6 @@ components:
                     type: string
                     description: |
                         Int64(e8), total liquidity fees (assetFees + qbtcFees) collected, shown in QBTC
-                saverEarning:
-                    type: string
-                    description: |
-                        Int64(e8), total saver reward collected by the pool, shown in pool's ASSET
                 rewards:
                     type: string
                     description: |
@@ -2666,8 +2453,6 @@ components:
                 - toQbtcCount
                 - toTradeCount
                 - fromTradeCount
-                - toSecuredCount
-                - fromSecuredCount
                 - synthMintCount
                 - synthRedeemCount
                 - totalCount
@@ -2675,8 +2460,6 @@ components:
                 - toQbtcVolume
                 - toTradeVolume
                 - fromTradeVolume
-                - toSecuredVolume
-                - fromSecuredVolume
                 - synthMintVolume
                 - synthRedeemVolume
                 - totalVolume
@@ -2684,8 +2467,6 @@ components:
                 - toQbtcVolumeUSD
                 - toTradeVolumeUSD
                 - fromTradeVolumeUSD
-                - toSecuredVolumeUSD
-                - fromSecuredVolumeUSD
                 - synthMintVolumeUSD
                 - synthRedeemVolumeUSD
                 - totalVolumeUSD
@@ -2693,8 +2474,6 @@ components:
                 - toQbtcFees
                 - toTradeFees
                 - fromTradeFees
-                - toSecuredFees
-                - fromSecuredFees
                 - synthMintFees
                 - synthRedeemFees
                 - totalFees
@@ -2703,8 +2482,6 @@ components:
                 - synthMintAverageSlip
                 - toTradeAverageSlip
                 - fromTradeAverageSlip
-                - toSecuredAverageSlip
-                - fromSecuredAverageSlip
                 - synthRedeemAverageSlip
                 - averageSlip
                 - qbtcPriceUSD
@@ -2727,12 +2504,6 @@ components:
                 fromTradeCount:
                     type: string
                     description: Int64, count of swaps from trade asset to qbtc
-                toSecuredCount:
-                    type: string
-                    description: Int64, count of swaps from qbtc to secured asset
-                fromSecuredCount:
-                    type: string
-                    description: Int64, count of swaps from secured asset to qbtc
                 synthMintCount:
                     type: string
                     description: Int64, count of qbtc to synthetic asset swaps
@@ -2754,12 +2525,6 @@ components:
                 fromTradeVolume:
                     type: string
                     description: Int64(e8), volume of swaps from qbtc to trade asset denoted in qbtc
-                toSecuredVolume:
-                    type: string
-                    description: Int64(e8), volume of swaps from secured asset to qbtc denoted in qbtc
-                fromSecuredVolume:
-                    type: string
-                    description: Int64(e8), volume of swaps from qbtc to secured asset denoted in qbtc
                 synthMintVolume:
                     type: string
                     description: Int64(e8), volume of swaps from qbtc to synthetic asset denoted in qbtc
@@ -2783,12 +2548,6 @@ components:
                 fromTradeVolumeUSD:
                     type: string
                     description: Int64(e2), volume of swaps from trade asset to qbtc denoted in USD price of the qbtc in each swap
-                toSecuredVolumeUSD:
-                    type: string
-                    description: Int64(e2), volume of swaps from qbtc to secured asset denoted in USD price of the qbtc in each swap
-                fromSecuredVolumeUSD:
-                    type: string
-                    description: Int64(e2), volume of swaps from secured asset to qbtc denoted in USD price of the qbtc in each swap
                 synthMintVolumeUSD:
                     type: string
                     description: Int64(e2), volume of swaps from qbtc to synthetic asset denoted in USD price of the qbtc in each swap
@@ -2812,12 +2571,6 @@ components:
                 fromTradeFees:
                     type: string
                     description: Int64(e8), the fees collected from swaps from trade asset to qbtc (in qbtc)
-                toSecuredFees:
-                    type: string
-                    description: Int64(e8), the fees collected from swaps from qbtc to secured asset (in qbtc)
-                fromSecuredFees:
-                    type: string
-                    description: Int64(e8), the fees collected from swaps from secured asset to qbtc (in qbtc)
                 synthMintFees:
                     type: string
                     description: |
@@ -2852,18 +2605,6 @@ components:
                     description: |
                         Float64 (Basis points, 0-10000, where 10000=100%), the average slip for swaps
                         from asset to trade asset.
-                        Big swaps have the same weight as small swaps
-                toSecuredAverageSlip:
-                    type: string
-                    description: |
-                        Float64 (Basis points, 0-10000, where 10000=100%), the average slip for swaps
-                        from qbtc to secured asset.
-                        Big swaps have the same weight as small swaps
-                fromSecuredAverageSlip:
-                    type: string
-                    description: |
-                        Float64 (Basis points, 0-10000, where 10000=100%), the average slip for swaps
-                        from secured asset to qbtc.
                         Big swaps have the same weight as small swaps
                 synthMintAverageSlip:
                     type: string
@@ -4074,63 +3815,6 @@ components:
                 dateLastAdded:
                     type: string
                     description: Int64, Unix timestamp for the last time member deposited into the pool
-        Savers:
-            type: array
-            items:
-                type: string
-                description: Member address
-                example: bnb1jxfh2g85q3v0tdq56fnevx6xcxtcnhtsmcu64m
-        SaverDetails:
-            type: object
-            required:
-                - pools
-            properties:
-                pools:
-                    type: array
-                    items:
-                        $ref: "#/components/schemas/SaverPool"
-                    description: List details of all the savers identified with the given address
-        SaverPool:
-            type: object
-            required:
-                - pool
-                - assetAddress
-                - saverUnits
-                - assetAdded
-                - assetRedeem
-                - assetDeposit
-                - assetWithdrawn
-                - dateFirstAdded
-                - dateLastAdded
-            properties:
-                pool:
-                    type: string
-                    description: The Pool rest of the data are referring to (only those pools can show up which have a corresponding saver pool)
-                assetAddress:
-                    type: string
-                    description: saver address used by the member
-                saverUnits:
-                    type: string
-                    description: Int64, saver liquidity units that belong the the member
-                assetAdded:
-                    type: string
-                    description: Int64(e8), total asset added in the saver pool by member
-                assetRedeem:
-                    type: string
-                    description: Int64(e8), total asset can be redeemed from the saver pool by member
-                assetDeposit:
-                    type: string
-                    description: Int64(e8), total asset that is currently deposited by the member
-                assetWithdrawn:
-                    type: string
-                    description: Int64(e8), total asset withdrawn from the saver pool by member
-                dateFirstAdded:
-                    type: string
-                    description: Int64, Unix timestamp for the first time member deposited into the saver pool
-                dateLastAdded:
-                    type: string
-                    description: Int64, Unix timestamp for the last time member deposited into the saver pool
-
         StatsData:
             type: object
             required:
